--- a/adminx/application/view/article/trash.html
+++ b/adminx/application/view/article/trash.html
@@ -1,61 +1,13 @@
 <div class="layui-card">
-    <form class="layui-form layui-card-header layuiadmin-card-header-auto" tableId="lay-common-table">
-        <div class="layui-form-item">
-            <div class="layui-inline">
-                <div class="layui-input-inline">
-                    <input type="text" name="keyword" autocomplete="off" placeholder="标题" class="layui-input"/>
-                </div>
-            </div>
-
-            <div class="layui-inline">
-                <label class="layui-form-mid">分类</label>
-                <div class="layui-input-inline">
-                    <select name="path" id="path">
-                        <option value="">--请选择--</option>
-                        {volist name="cate" id="vo"}
-                        <option value='{$vo['path']}'>{php}
-                            for($i=0; $i<$vo['count']*2; $i++){
-                               echo '&nbsp;&nbsp;';            
-                            }
-                        {/php}{$vo['name']}</option>
-                        {/volist}
-                    </select>               
-                </div>
-            </div>
-
-            <div class="layui-inline">
-                <label class="layui-form-mid">状态</label>
-                <div class="layui-input-inline">
-                    <select name="del">
-                        <option value="">--请选择--</option>
-                        <option value="1">正常</option>
-                        <option value="0">草稿</option>
-                        </volist>
-                    </select>
-                </div>
-            </div>
-
-            <div class="layui-inline">
-                <button class="layui-btn" lay-submit lay-filter="tools-btn-search" style="display: block;">
-                    <i class="layui-icon layui-icon-search layuiadmin-button-btn"></i>
-                </button>
-            </div>
-        </div>
-    </form>
-
     <div class="layui-card-body">
         <div style="padding-bottom: 10px;">            
-            <button class="layui-btn layui-btn-sm layui-btn-primary tools-btn" data-type="add" data-tableId="lay-common-table" url="{:url('article/pub')}" topWidth="80%" topHeight="80%" topTitle="新增">添加</button>
+            <button class="layui-btn layui-btn-sm layui-btn-primary tools-btn" data-type="back">返回</button>
             <button class="layui-btn layui-btn-sm layui-btn-primary tools-btn" data-type="refresh" data-tableId="lay-common-table">刷新</button>
-            
-            <button class="layui-btn layui-btn-sm layui-btn-primary tools-btn" data-type="selectOpen" data-tableId="lay-common-table" url="{:url('article/move')}" topWidth="500" topHeight="80%" topTitle="批量移动">移动</button>
-
-            <button class="layui-btn layui-btn-sm layui-btn-primary tools-btn" data-type="url" data-tableId="lay-common-table" url="{:url('article/trash')}">回收站</button>
-
-            <button class="layui-btn layui-btn-sm layui-btn-danger tools-btn" data-type="action" data-tableId="lay-common-table" url="{:url('article/del')}">删除</button>
+            <button class="layui-btn layui-btn-sm layui-btn-primary tools-btn" data-type="action" data-tableId="lay-common-table" url="{:url('article/restore')}">还原</button>
+            <button class="layui-btn layui-btn-sm layui-btn-danger tools-btn" data-type="action" data-tableId="lay-common-table" url="{:url('article/truedel')}" alert="1" alertMsg="删除后无法恢复，确定吗？">彻底删除</button>
         </div>
 
-        <table id="lay-common-table" class="lay-common-table" lay-method="post" lay-url="{:url('article/index')}" lay-filter="lay-common-table"></table>
+        <table id="lay-common-table" class="lay-common-table" lay-method="post" lay-url="{:url('article/trash')}" lay-filter="lay-common-table"></table>
         <div class="fsDatagridCols">
             <p checkbox="true"/>    
             <p field="title" title="标题" width="40%"/>       
