--- a/adminx/application/view/common/style/login.css
+++ b/adminx/application/view/common/style/login.css
@@ -13,12 +13,13 @@ html,body,#LAY_app{height:100%;}
 #LAY-user-login,
 .layadmin-user-display-show{display: block !important;} 
 .layadmin-user-login{position: relative; left: 0; top: 0; padding: 110px 0; min-height: 100%; box-sizing: border-box;}
-.layadmin-user-login-main{width: 375px; margin: 0 auto; box-sizing: border-box;}
+
 .layadmin-user-login-box{padding: 20px;}
-.layadmin-user-login-header{text-align: center;}
+.layadmin-user-login-header{text-align: center; margin-bottom: 30px}
 .layadmin-user-login-header h2{margin-bottom: 10px; font-weight: 300; font-size: 30px; color: #000;}
 .layadmin-user-login-header p{font-weight: 300; color: #999;}
 
+.layadmin-user-login-body{width: 375px; margin: 0 auto; box-sizing: border-box;}
 .layadmin-user-login-body .layui-form-item{position: relative;}
 .layadmin-user-login-icon{position: absolute; left: 1px; top: 1px; width: 38px; line-height: 36px; text-align: center; color: #d2d2d2;}
 .layadmin-user-login-body .layui-form-item .layui-input{padding-left: 38px;}
