--- a/adminx/application/view/login/index.html
+++ b/adminx/application/view/login/index.html
@@ -14,11 +14,12 @@
 <div class="layadmin-user-login layadmin-user-display-show" id="LAY-user-login" style="display: none;">
     <div class="layadmin-user-login-main">
 
-        <div class="layadmin-user-login-box layadmin-user-login-header">
+        <div class="layadmin-user-login-header">
             <h2>{:config('site.name')}</h2>
+            <h5>中联管理系统V1.0.0</h5>
         </div>
 
-        <form class="layadmin-user-login-box layadmin-user-login-body layui-form">
+        <form class=" layadmin-user-login-body layui-form">
             <div class="layui-form-item">
                 <label class="layadmin-user-login-icon layui-icon layui-icon-username" for="LAY-user-login-username"></label>
                 <input type="text" name="username" id="LAY-user-login-username" lay-verify="required" placeholder="用户名" class="layui-input">
@@ -26,22 +27,22 @@
 
             <div class="layui-form-item">
                 <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
-                <input type="password" name="password" id="LAY-user-login-password" lay-verify="required" placeholder="密码" class="layui-input">
+                <input type="password" name="password" lay-verify="required" placeholder="密码" class="layui-input">
             </div>
 
             <div class="layui-form-item">
                 <div class="layui-row">
                     <div class="layui-col-xs7">
                         <label class="layadmin-user-login-icon layui-icon layui-icon-vercode" for="LAY-user-login-vercode"></label>
-                        <input type="text" name="checkcode" id="LAY-user-login-vercode" lay-verify="required" placeholder="图形验证码" class="layui-input">
+                        <input type="text" name="checkcode" lay-verify="required" placeholder="图形验证码" class="layui-input">
                     </div>
                     <div class="layui-col-xs5">
-                        <div style="margin-left: 10px;"><img src="{:url('Login/verify')}" class="layadmin-user-login-codeimg" id="LAY-get-vercode" url="{:url('Login/verify')}"></div>
+                        <div style="margin-left: 10px;"><img src="{:url('Login/verify')}" class="layadmin-user-login-codeimg" id="lay-get-vercode" url="{:url('Login/verify')}"></div>
                     </div>
                 </div>
             </div>
             <div class="layui-form-item">
-                <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-common-submit" url="{:url('Login/doLogin')}">登 入</button>
+                <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="lay-common-submit" url="{:url('Login/doLogin')}">登 入</button>
             </div>
         </form>
     </div>
