--- a/adminx/application/view/category/index.html
+++ b/adminx/application/view/category/index.html
@@ -1,21 +1,20 @@
 <div class="layui-card">
     <div class="layui-card-body">
         <div style="padding-bottom: 10px;">
-            <?php $model=config("TABLE_MODEL"); ?>
-            {volist name="model" id="vo"}
+            {volist name="cateModel" id="vo"}
             {eq name="vo.show" value="1"}
-            <a href="{:url('Category/index',array('mid'=>$vo['id']))}" class="layui-btn layui-btn-sm <?php if($mid!=$vo['id']){echo 'layui-btn-primary';} ?>">{$vo['name']}</a>
+            <a href="{:url('Category/index',array('model'=>$vo['id']))}" class="layui-btn layui-btn-sm <?php if($model!=$vo['id']){echo 'layui-btn-primary';} ?>">{$vo['name']}</a>
             {/eq}
             {/volist}
-            
-            <button style="float: right;" class="layui-btn layui-btn-sm layui-btn-normal" function="top" topUrl="{:url('Category/add',array('mid'=>$mid))}" topWidth="80%" isMaximize="0" topHeight="80%" topTitle="添加根栏目">添加根栏目</button>           
+
+            <button style="float: right;" class="layui-btn layui-btn-sm layui-btn-normal cate-btn" url="{:url('category/pub',array('model'=>$model))}" topTitle="添加根栏目">添加根栏目</button>         
         </div>
 
         <table class="layui-table">
             <colgroup>
-                <col width="100">
+                <col width="80">
                 <col>
-                <col width="100">
+                <col width="300">
                 <col width="100">                
                 <col width="100">            
             </colgroup>
@@ -32,10 +31,10 @@
                 {volist name='list' id="vo"}
                 <tr>
                     <td>{$vo.id}</td>
-                    <td>{$vo.name}</td>
+                    <td> {eq name="vo.fid" value="0"}<strong style="color:#000">{$vo.name}</strong>{else/}<span {$vo.style}>{$vo.name}</span>{/eq}</td>
                     <td>{$vo.url}</td>
                     <td>{$vo.sort}</td>
-                    <td class="layui-form"><select lay-filter="cate-action" data-id="{$vo.id}">
+                    <td class="layui-form"><select lay-filter="cate-action" data-id="{$vo.id}" data-fid="{$vo.fid}">
                         <option value="">操作</option>
                         <option value="add">添加子栏目</option>
                         <option value="edit">编辑</option>
@@ -52,11 +51,102 @@ layui.config({
     base: '{:RES}/' //静态资源所在路径
 }).extend({
     index: 'lib/index' //主入口模块
-}).use(['index','form'], function() {    
-    var $ = layui.$,form = layui.form;
+}).use(['index','form'], function() {
+    var $ = layui.$,
+        admin = layui.admin,
+        form = layui.form;
+
+    $('.cate-btn').on('click', function() {
+        var refresh = 1;
+        top.layer.open({
+            type: 2,
+            title: $(this).attr('topTitle'),
+            content: $(this).attr('url'),
+            maxmin: true,
+            area: ["80%","80%"],
+            btn: ['确定'],
+            yes: function(index, layero) {
+                //点击确认触发 iframe 内容中的按钮提交
+                var submit = layero.find('iframe').contents().find("#lay-common-submit");
+                submit.click();
+            },
+            cancel:function(){
+                refresh = 0;
+            },
+            end:function(){
+                if(refresh==1) {
+                    window.location.reload();
+                }
+            }
+        });
+    });
+
     form.on('select(cate-action)', function(obj) {
-        console.log($(obj.elem).attr("data-id"));
-        console.log(obj.value); 
+        var id = $(obj.elem).attr("data-id");
+        var fid = $(obj.elem).attr("data-fid");
+        var action = obj.value; 
+        var refresh = 1;
+        if(action=='add'){
+            top.layer.open({
+                type: 2,
+                title: "添加子栏目",
+                content: "{:url('category/pub')}?model={$model}&fid="+id,
+                maxmin: true,
+                area: ["80%","80%"],
+                btn: ['确定'],
+                yes: function(index, layero) {
+                    //点击确认触发 iframe 内容中的按钮提交
+                    var submit = layero.find('iframe').contents().find("#lay-common-submit");
+                    submit.click();                      
+                },
+                cancel:function(){
+                    refresh = 0;
+                },
+                end:function(){
+                    if(refresh==1) {
+                        window.location.reload();
+                    }
+                }
+            });
+        }else if(action=='edit'){
+            top.layer.open({
+                type: 2,
+                title: "编辑栏目",
+                content: "{:url('category/pub')}?model={$model}&id="+id+"&fid="+fid,
+                maxmin: true,
+                area: ["80%","80%"],
+                btn: ['确定'],
+                yes: function(index, layero) {
+                    //点击确认触发 iframe 内容中的按钮提交
+                    var submit = layero.find('iframe').contents().find("#lay-common-submit");
+                    submit.click();                      
+                },
+                cancel:function(){
+                    refresh = 0;
+                },
+                end:function(){
+                    if(refresh==1) {
+                        window.location.reload();
+                    }
+                }
+            });
+        }else if(action=='del'){
+            admin.req({
+                url: "{:url('category/del')}",            
+                data: {id:id},
+                method:'post',
+                done: function(res) {
+                    //登入成功的提示与跳转
+                    layer.msg(res.msg, {
+                        offset: '15px',
+                        icon: 1,
+                        time: 1000
+                    }, function() {
+                        $(obj.elem).parent().parent().remove();                   
+                    });
+                }
+            });
+        }
 
         $(obj.elem).val("");
         form.render();
