--- a/adminx/application/view/common/style/admin.css
+++ b/adminx/application/view/common/style/admin.css
@@ -507,7 +507,11 @@ html{background-color: #f2f2f2; color: #666;}
 /* 自定义部分 */
 .layui-layer-btn{border-top: 1px #f1f1f1 solid}
 .thumb{width: 120px; background: #f1f1f1}
-
+.node-select{width: 100%;clear: both;}
+.node-select .bd{height:300px; overflow: auto;}
+.node-select .bd li{cursor: pointer; line-height: 30px;}
+.node-select .bd li.active{background-color: #f1f1f1}
+.node-select .fd{border-top: 1px #dbdbdb solid; padding-top: 10px}
 
 /*
 
