--- a/adminx/application/view/index/index.html
+++ b/adminx/application/view/index/index.html
@@ -73,193 +73,79 @@
                 </li>
             </ul>
         </div>
+
         <!-- 侧边菜单 -->
         <div class="layui-side layui-side-menu">
             <div class="layui-side-scroll">
                 <div class="layui-logo">
                     <span>后台管理系统</span>
                 </div>
-                <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
-                    <li data-name="home" class="layui-nav-item layui-nav-itemed">
-                        <a href="javascript:;" lay-tips="主页" lay-direction="2">
-                        <i class="layui-icon layui-icon-home"></i>
-                        <cite>主页</cite>
-                        </a>
-                        <dl class="layui-nav-child">
-                            <dd data-name="console" class="layui-this">
-                                <a lay-href="{:url('index/main')}">控制台</a>
-                            </dd>
-                        </dl>
-                    </li>
 
-                    <li data-name="content" class="layui-nav-item">
-                        <a href="javascript:;" lay-tips="内容管理" lay-direction="2">
-                        <i class="layui-icon layui-icon-app"></i>
-                        <cite>内容管理</cite>
-                        </a>
-                        <dl class="layui-nav-child">
-                            <dd data-name="console">
-                                <a lay-href="{:url('category/index')}">分类管理</a>
+                <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
+                    {volist name="menu" id="vo" key="k"}
+                    <li class="layui-nav-item {eq name="k" value="1"}layui-nav-itemed{/eq}">
+                        <a href="javascript:;" lay-tips="{$vo.name}" lay-direction="2">
+                        <i class="layui-icon {$vo.icon}"></i>
+                        <cite>{$vo.name}</cite>
+                        </a>                 
+                        <dl class="layui-nav-child">                            
+                            {volist name="vo.childrens" id="f"}
+                            {eq name="f.leaf" value="0"}
+                            <dd>
+                                <a lay-href="{$f.url}">{$f.name}</a>
                             </dd>
-                            <dd data-name="console">
-                                <a lay-href="{:url('article/index')}">文章管理</a>
-                            </dd>
-                            <dd data-name="console">
-                                <a lay-href="{:url('ad/index')}">广告管理</a>
-                            </dd>
-                        </dl>
-                    </li>
-                    
-                    <li data-name="template" class="layui-nav-item">
-                        <a href="javascript:;" lay-tips="页面" lay-direction="2">
-            <i class="layui-icon layui-icon-template"></i>
-            <cite>页面</cite>
-          </a>
-                        <dl class="layui-nav-child">
-                            <dd><a lay-href="template/personalpage.html">个人主页</a></dd>
-                            <dd><a lay-href="template/addresslist.html">通讯录</a></dd>
-                            <dd><a lay-href="template/caller.html">客户列表</a></dd>
-                            <dd><a lay-href="template/goodslist.html">商品列表</a></dd>
-                            <dd><a lay-href="template/msgboard.html">留言板</a></dd>
-                            <dd><a lay-href="template/search.html">搜索结果</a></dd>
-                            <dd><a href="user/reg.html" target="_blank">注册</a></dd>
-                            <dd><a href="user/login.html" target="_blank">登入</a></dd>
-                            <dd><a href="user/forget.html" target="_blank">忘记密码</a></dd>
-                            <dd><a lay-href="template/tips/404.html">404页面不存在</a></dd>
-                            <dd><a lay-href="template/tips/error.html">错误提示</a></dd>
-                            <dd><a lay-href="//www.baidu.com/">百度一下</a></dd>
-                            <dd><a lay-href="//www.layui.com/">layui官网</a></dd>
-                            <dd><a lay-href="//www.layui.com/admin/">layuiAdmin官网</a></dd>
-                        </dl>
-                    </li>
-                    <li data-name="app" class="layui-nav-item">
-                        <a href="javascript:;" lay-tips="应用" lay-direction="2">
-            <i class="layui-icon layui-icon-app"></i>
-            <cite>应用</cite>
-          </a>
-                        <dl class="layui-nav-child">
-                            <dd data-name="content">
-                                <a href="javascript:;">内容系统</a>
+                            {else/}
+                            <dd>
+                                <a href="javascript:;">{$f.name}</a>
                                 <dl class="layui-nav-child">
-                                    <dd data-name="list"><a lay-href="app/content/list.html">文章列表</a></dd>
-                                    <dd data-name="tags"><a lay-href="app/content/tags.html">分类管理</a></dd>
-                                    <dd data-name="comment"><a lay-href="app/content/comment.html">评论管理</a></dd>
+                                    {volist name="f.childrens" id="s"}
+                                    <dd><a lay-href="{$s.url}">{$s.name}</a></dd>
+                                    {/volist}
                                 </dl>
                             </dd>
-                            <dd data-name="forum">
-                                <a href="javascript:;">社区系统</a>
-                                <dl class="layui-nav-child">
-                                    <dd data-name="list"><a lay-href="app/forum/list.html">帖子列表</a></dd>
-                                    <dd data-name="replys"><a lay-href="app/forum/replys.html">回帖列表</a></dd>
-                                </dl>
-                            </dd>
-                            <dd>
-                                <a lay-href="app/message/index.html">消息中心</a>
-                            </dd>
-                            <dd data-name="workorder">
-                                <a lay-href="app/workorder/list.html">工单系统</a>
-                            </dd>
+                            {/eq}                            
+                            {/volist}                            
                         </dl>
                     </li>
-                    <li data-name="senior" class="layui-nav-item">
-                        <a href="javascript:;" lay-tips="高级" lay-direction="2">
-            <i class="layui-icon layui-icon-senior"></i>
-            <cite>高级</cite>
-          </a>
-                        <dl class="layui-nav-child">
-                            <dd>
-                                <a layadmin-event="im">LayIM 通讯系统</a>
-                            </dd>
-                            <dd data-name="echarts">
-                                <a href="javascript:;">Echarts集成</a>
-                                <dl class="layui-nav-child">
-                                    <dd><a lay-href="senior/echarts/line.html">折线图</a></dd>
-                                <dd><a lay-href="senior/echarts/bar.html">柱状图</a></dd>
-                                <dd><a lay-href="senior/echarts/map.html">地图</a></dd>
-                            </dl>
-                        </dd>
-                    </dl>
-                </li>
-                <li data-name="user" class="layui-nav-item">
-                    <a href="javascript:;" lay-tips="用户" lay-direction="2">
-        <i class="layui-icon layui-icon-user"></i>
-        <cite>用户</cite>
-      </a>
-                    <dl class="layui-nav-child">
-                        <dd>
-                            <a lay-href="user/user/list.html">网站用户</a>
-                        </dd>
-                        <dd>
-                            <a lay-href="user/administrators/list.html">后台管理员</a>
-                        </dd>
-                        <dd>
-                            <a lay-href="user/administrators/role.html">角色管理</a>
-                        </dd>
-                    </dl>
-                </li>
-                <li data-name="set" class="layui-nav-item">
-                    <a href="javascript:;" lay-tips="设置" lay-direction="2">
-        <i class="layui-icon layui-icon-set"></i>
-        <cite>设置</cite>
-      </a>
-                    <dl class="layui-nav-child">
-                        <dd class="layui-nav-itemed">
-                            <a href="javascript:;">系统设置</a>
-                            <dl class="layui-nav-child">
-                                <dd><a lay-href="set/system/website.html">网站设置</a></dd>
-                                <dd><a lay-href="set/system/email.html">邮件服务</a></dd>
-                            </dl>
-                        </dd>
-                        <dd class="layui-nav-itemed">
-                            <a href="javascript:;">我的设置</a>
-                            <dl class="layui-nav-child">
-                                <dd><a lay-href="set/user/info.html">基本资料</a></dd>
-                                <dd><a lay-href="set/user/password.html">修改密码</a></dd>
-                            </dl>
-                        </dd>
-                    </dl>
-                </li>
-                <li data-name="get" class="layui-nav-item">
-                    <a href="javascript:;" lay-href="//www.layui.com/admin/#get" lay-tips="授权" lay-direction="2">
-        <i class="layui-icon layui-icon-auz"></i>
-        <cite>授权</cite>
-      </a>
-                </li>
-            </ul>
+                    {/volist}                    
+                </ul>
+            </div>
         </div>
+
+        <!-- 页面标签 -->
+        <div class="layadmin-pagetabs" id="LAY_app_tabs">
+            <div class="layui-icon layadmin-tabs-control layui-icon-prev" layadmin-event="leftPage"></div>
+            <div class="layui-icon layadmin-tabs-control layui-icon-next" layadmin-event="rightPage"></div>
+            <div class="layui-icon layadmin-tabs-control layui-icon-down">
+                <ul class="layui-nav layadmin-tabs-select" lay-filter="layadmin-pagetabs-nav">
+                    <li class="layui-nav-item" lay-unselect>
+                        <a href="javascript:;"></a>
+                        <dl class="layui-nav-child layui-anim-fadein">
+                            <dd layadmin-event="closeThisTabs"><a href="javascript:;">关闭当前标签页</a></dd>
+                            <dd layadmin-event="closeOtherTabs"><a href="javascript:;">关闭其它标签页</a></dd>
+                            <dd layadmin-event="closeAllTabs"><a href="javascript:;">关闭全部标签页</a></dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+            <div class="layui-tab" lay-unauto lay-allowClose="true" lay-filter="layadmin-layout-tabs">
+                <ul class="layui-tab-title" id="LAY_app_tabsheader">
+                    <li lay-id="home/console.html" lay-attr="home/console.html" class="layui-this"><i class="layui-icon layui-icon-home"></i></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- 主体内容 -->
+        <div class="layui-body" id="LAY_app_body">
+            <div class="layadmin-tabsbody-item layui-show">
+                <iframe src="{:url('index/main')}" frameborder="0" class="layadmin-iframe"></iframe>
+            </div>
+        </div>
+        <!-- 辅助元素，一般用于移动设备下遮罩 -->
+        <div class="layadmin-body-shade" layadmin-event="shade"></div>
     </div>
-    <!-- 页面标签 -->
-    <div class="layadmin-pagetabs" id="LAY_app_tabs">
-        <div class="layui-icon layadmin-tabs-control layui-icon-prev" layadmin-event="leftPage"></div>
-        <div class="layui-icon layadmin-tabs-control layui-icon-next" layadmin-event="rightPage"></div>
-        <div class="layui-icon layadmin-tabs-control layui-icon-down">
-            <ul class="layui-nav layadmin-tabs-select" lay-filter="layadmin-pagetabs-nav">
-                <li class="layui-nav-item" lay-unselect>
-                    <a href="javascript:;"></a>
-                    <dl class="layui-nav-child layui-anim-fadein">
-                        <dd layadmin-event="closeThisTabs"><a href="javascript:;">关闭当前标签页</a></dd>
-                        <dd layadmin-event="closeOtherTabs"><a href="javascript:;">关闭其它标签页</a></dd>
-                        <dd layadmin-event="closeAllTabs"><a href="javascript:;">关闭全部标签页</a></dd>
-                    </dl>
-                </li>
-            </ul>
-        </div>
-        <div class="layui-tab" lay-unauto lay-allowClose="true" lay-filter="layadmin-layout-tabs">
-            <ul class="layui-tab-title" id="LAY_app_tabsheader">
-                <li lay-id="home/console.html" lay-attr="home/console.html" class="layui-this"><i class="layui-icon layui-icon-home"></i></li>
-            </ul>
-        </div>
-    </div>
-    <!-- 主体内容 -->
-    <div class="layui-body" id="LAY_app_body">
-        <div class="layadmin-tabsbody-item layui-show">
-            <iframe src="{:url('index/main')}" frameborder="0" class="layadmin-iframe"></iframe>
-        </div>
-    </div>
-    <!-- 辅助元素，一般用于移动设备下遮罩 -->
-    <div class="layadmin-body-shade" layadmin-event="shade"></div>
 </div>
-</div>
+
 <script src="{:RES}/layui/layui.js"></script>
 <script>
 layui.config({
